--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 </div>
 
 <!-- About Container -->
-<div class="w3-container w3-padding-64 w3-red w3-grayscale w3-xlarge" id="about">
+<div class="w3-container w3-padding-64 w3-red w3-xlarge" id="about">
   <div class="w3-content">
     <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">Info</h1>
     <h1 class="w3-center w3-xxxlarge"><p><strong>Precios I.V.A. incluido.</strong> <br>
