--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@ constante, siguiendo las recomendaciones de las autoridades sanitarias.</p>
     <div class="w3-row">
       <div class="w3-col s6">
         <p>Todos los días</p>
-        <p>Centro Comercial de la Victoria 12.00 - 00.00</p>
+        <p>Centro Comercial Rincón de la Victoria 12.00 - 00.00</p>
         <p>Cala Del Moral 19:00 - 00:00</p>
         <p>Rincón de la Victoria 19:00 - 00:00</p>
         <p>Carranque 19:00 - 00:00</p>
