mejora de estilo

--- a/index.html
+++ b/index.html
@@ -496,9 +496,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Amatic SC", sans-serif}
 Ingrediente extra: <br>
 en Pizza 0,80€ <br>
 en bocadillo 0,60€</p></h1>
-    <h1 class="w3-center w3-xxxlarge"><p><strong>MANTENGA LAS DISTANCIAS DE SEGURIDAD</strong></h1></p>
-    <p>En nuestras intalaciones realizamos un protocolo de limpieza y desinfección
-constante, siguiendo las recomendaciones de las autoridades sanitarias.</p>
+    <h1 class="w3-center w3-xxxlarge"><p><strong>MANTENGA LAS DISTANCIAS DE SEGURIDAD</strong></p></h1>
+     <h1 class="w3-center w3-xlarge"><p>En nuestras intalaciones realizamos un protocolo de limpieza y desinfección
+constante, siguiendo las recomendaciones de las autoridades sanitarias.</p></h1>
         <h1><b>Horario</b></h1>
     
     <div class="w3-row">
