--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@ Ingrediente extra: <br>
 en Pizza 0,80€ <br>
 en bocadillo 0,60€</p></h1>
     <h1 class="w3-center w3-xxxlarge"><p><strong>MANTENGA LAS DISTANCIAS DE SEGURIDAD</strong></p></h1>
-     <h1 class="w3-center w3-xlarge"><p>En nuestras intalaciones realizamos un protocolo de limpieza y desinfección
+     <h1 class="w3-center w3-xxlarge"><p>En nuestras intalaciones realizamos un protocolo de limpieza y desinfección
 constante, siguiendo las recomendaciones de las autoridades sanitarias.</p></h1>
         <h1><b>Horario</b></h1>
     
