arreglo horario comercial

--- a/index.html
+++ b/index.html
@@ -501,11 +501,15 @@ constante, siguiendo las recomendaciones de las autoridades sanitarias.</p></h1>
     
     <div class="w3-row">
       <div class="w3-col s12">
-        <p>Todos los días</p>
-        <p>Centro Comercial Rincón de la Victoria 12:00 - 00:00</p>
-        <p>Cala Del Moral lunes a viernes 19:00 - 00:00 <br> sábado y domingo 13:00 a 16:00 y 19:00 a 00:00 </p>
-        <p>Rincón de la Victoria lunes a viernes 19:00 - 00:00 <br> sábado y domingo 13:00 a 16:00 y 19:00 a 00:00</p>
-        <p>Carranque 19:00 - 00:00</p>
+        <p>- Rincón y Cala 
+            <br><br>
+           Todos los días de 19:00 a 00:00h <br>
+           Sábados y Domingos de 13:00 a 16:00h. 
+           <br>
+           - Centro Comercial
+           <br><br>
+           De Domingo a Jueves de 12:30 a 23:00h <br>
+           Viernes y Sábados de 12:30 a 00:00h</p>
         </div>
     </div>
     
