--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ body, html {height: 100%}
     </div>
     <div class="w3-container">
         <h4><b>MANTENGA LA DISTANCIA DE SEGURIDAD</b></h4>
-        <h5>En nuestras intalaciones realizamos un protocolo de limpieza y desinfección constante, siguiendo las recomendaciones de las autoridades sanitarias. </h5>
+        <h5>En nuestras instalaciones realizamos un protocolo de limpieza y desinfección constante, siguiendo las recomendaciones de las autoridades sanitarias. </h5>
         <br>
         <h4><b>Horario:</b></h4>
         <h5><b>Rincón y Cala del Moral</b>
