--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ body, html {height: 100%}
   <div class="w3-modal-content w3-animate-zoom">
     <div class="w3-container w3-orange w3-display-container">
       <span onclick="document.getElementById('menu').style.display='none'" class="w3-button w3-display-topright w3-large">X</span>
-      <h1>Pitufos</h1>
+      <h1>Hamburguesas</h1>
     </div>
     <div class="w3-container">
         <h5>1. Completa <b>3.40 €</b></h5>
